// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductCardWrapper /> it renders ProductCardWrapper 1`] = `
<div
  className="mfui-beta-product-card-wrapper mfui-beta-product-card-wrapper_hint mfui-beta-product-card-wrapper_hint_green mfui-beta-product-card-wrapper_bl mfui-beta-product-card-wrapper_br"
  onClick={[Function]}
>
  <div
    className="mfui-beta-product-card-wrapper__inner"
  >
    <div
      className="mfui-beta-product-card-wrapper__hint-box"
    >
      <div
        className="mfui-beta-product-card-wrapper__hint-text"
      >
        Рекоммендуем
      </div>
    </div>
    <div
      className="mfui-beta-product-card-wrapper__container"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<ProductCardWrapper /> it renders without hint 1`] = `
<div
  className="mfui-beta-product-card-wrapper"
  onClick={[Function]}
>
  <div
    className="mfui-beta-product-card-wrapper__inner"
  >
    <div
      className="mfui-beta-product-card-wrapper__container"
    >
      <div />
    </div>
  </div>
</div>
`;
